fix route and replate body param with auth bearer method
