# app/app/Http/Controllers/Api/ECLIController.php
@@ -34,7 +34,21 @@ class ECLIController extends Controller
         );
     }
 
-
+    /**
+    * @OA\Post(
+    * path="/ecli/post",
+    * summary="Post new document",
+    * description="Post new document",
+    * operationId="ECLI",
+    * tags={"ECLI"},
+    * security={ {"bearer": {} }},
+    * @OA\Response(
+    *    response=200,
+    *    description="Success",
+    * )
+    * )
+    * )
+    */
 
     public function post(Request $request)
     {
